--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
-body {
-    margin: auto;
+*,
+*::before,
+*::after {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 .nav-center {
@@ -8,6 +12,11 @@ body {
     font-size: 25px;
     background-color: aliceblue;
     padding-left: 2em;
+    padding-right: 2em;
+    width: 100vw;
+    margin: 0;
+    height: 3em;
+    align-items: center;
 }
 .nav-links {
     display: flex;
@@ -29,6 +38,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: #5984B8;
 }
 
 .container {
@@ -41,6 +51,8 @@ main {
     margin-top: 5%;
     width: 29em;
     color: white;
+    height: 4em;
+    justify-content: center;
 }
 
 .color {
@@ -56,4 +68,9 @@ main {
     color: white;
     font-size: 20px;
     margin: 3em;
+}
+
+
+#btn:hover {
+    background-color: #46494b;
 }
