--- a/style.css
+++ b/style.css
@@ -29,6 +29,10 @@
     /* justify-self: space-between; */
 }
 
+.nav-links li:hover {
+    color: #999999;
+}
+
 a {
     text-decoration: none;
     /* font-size: 20px; */
